# function_wrapper

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  fwConfig.cmake.in
benchmarks/: fw_benchmarks.cpp
docs/: api.md  benchmarks.md  development.md  examples.md  integration.md
include/fw/: call_result.hpp  exceptions.hpp  function_ref.hpp  function_wrapper.hpp  member_adapter.hpp  move_only_function_wrapper.hpp  static_function.hpp
include/fw/detail/: concepts.hpp  signature_interface.hpp  vtable.hpp
tests/: concepts_test.cpp  exceptions_test.cpp  function_ref_test.cpp  function_wrapper_test.cpp  move_only_function_wrapper_test.cpp  signature_interface_test.cpp  test_types.hpp  vtable_test.cpp
